# python-deployments-hello-world

./: .platform.app.yaml  Dockerfile  README.md  README.rst  app.json  app.py  fly.toml  pyproject.toml  railway.toml  render.yaml  requirements.txt
