[tool.poetry]
name = "paas-deployment"
version = "0.1.0"
description = "Simple FastAPI app for testing PaaS deployment"
authors = ["Ben Lopatin <ben@benlopatin.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.91.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
